force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <description>SFP-10205 Details on which competitors are engaged at a client</description>
    <label>Competitor</label>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>