force-app/main/default/objects/Competitor__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <description>SFP-10205 [c] Reference to the client where this competitor is engaged.  
Updated to Master-Detail to simplify sharing</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>