force-app/main/default/objects/Competitor__c/fields/Estimated_Wallet_Share__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Wallet_Share__c</fullName>
    <description>SFP-10205 [c] Estimated share that this competitor has of the clients banking expenditure 
Note: Reduce to 0 decimal places as estimates are not that accurate</description>
    <inlineHelpText>Estimate the percentage share of wallet for this competitor</inlineHelpText>
    <label>Estimated Wallet Share (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>