force-app/main/default/objects/Competitor__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <description>SFP-10205 [c] List of the strengths of this competitor at this client.</description>
    <inlineHelpText>List the strengths of this competitor at this client.</inlineHelpText>
    <label>Strengths</label>
    <type>TextArea</type>
</CustomField>