force-app/main/default/objects/Competitor__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <description>SFP-10205 [c] List of the weaknesses of this competitor at this client.</description>
    <inlineHelpText>List the weaknesses of this competitor at this client.</inlineHelpText>
    <label>Weaknesses</label>
    <type>TextArea</type>
</CustomField>